# MCQGenerator_LLM

./: .gitignore  README.md  pyproject.toml  response.json  streamlit_app.py
notebooks/: data.txt  mcq.ipynb
src/mcqgenerator/: MCQGenerator.py  logger.py  utils.py
